[gd_scene load_steps=5 format=1]

[ext_resource path="res://imgs/ZGECorp@2.5x.png" type="Texture" id=1]
[ext_resource path="res://scripts/ZDECorp.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 25.7191, 49.9002 )

[sub_resource type="Animation" id=2]

resource/name = "fadeOut"
length = 0.5
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:power")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 100.0, 2.0 ]
}

[node name="ZDECorp" type="Sprite"]

transform/pos = Vector2( 0, -3.4248 )
texture = ExtResource( 1 )
script/script = ExtResource( 2 )
power = 100.0

[node name="Area2D" type="Area2D" parent="."]

transform/pos = Vector2( -173.49, 316.029 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.18915, 2.14044 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 1.18915, 2.14044 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="LevelSwitchTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadeOut = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="timeout" from="LevelSwitchTimer" to="." method="_on_LevelSwitchTimer_timeout"]


